# LebensSpur

./: .gitignore  CHANGELOG.md  OPEN_SOURCE_USAGE_INSTRUCTIONS.md  README.md  version1.0.6.md
.claude/: settings.local.json
ALTE/HW/: CMakeLists.txt  sdkconfig
GUI/: app.js  config.json  i18n.js  index.html  manifest.json  style.css  sw.js
GUI/i18n/: en.json  tr.json
GUI/js/: actions.js  app.js  auth.js  i18n.js  logs.js  mailGroups.js  ota.js  settings.js  state.js  theme.js  timer.js  ui.js  utils.js
GUI/lang/: de.json  en.json  es.json  fr.json  it.json  tr.json
HW/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  setup.html
HW/main/: CMakeLists.txt  api_auth.c  api_config.c  api_device.c  api_logs.c  api_ota.c  api_relay.c  api_setup.c  api_setup.h  api_timer.c  api_wifi.c  api_wifi.h  button_manager.c  config_manager.c  config_manager.h  device_id.c  ext_flash.c  ext_flash.h  file_manager.c  file_manager.h  idf_component.yml  main.c  relay_manager.c  relay_manager.h  session_auth.c  session_auth.h  time_manager.h  timer_scheduler.c  web_assets.c
HW_esp32C6/: CMakeLists.txt  README.md  clear.html  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  setup.html
HW_esp32C6/main/: CMakeLists.txt  analyze.py  api_auth.c  api_auth.h  api_config.h  api_device.h  api_logs.h  api_mail.c  api_mail.h  api_ota.c  api_ota.h  api_relay.h  api_timer.h  button_manager.c  button_manager.h  config_manager.c  config_manager.h  deps.py  device_id.c  device_id.h  ext_flash.c  ext_flash.h  file_manager.c  file_manager.h  final_analysis.py  gui_downloader.c  gui_downloader.h  gui_slot.c  gui_slot.h  idf_component.yml  log_manager.c  log_manager.h  mail_sender.c  mail_sender.h  main.c  ota_manager.c  ota_manager.h  relay_manager.c  relay_manager.h  session_auth.c  (+12 more)
Neue/: CLI_STYLE.md  CMakeLists.txt  README.md  flash.bat  flash_monitor.bat  fullclean.bat  monitor.bat  partitions.csv  sdkconfig  sdkconfig.defaults
Neue/ls_relay/: CMakeLists.txt
SmartKraft_LebensSpur/: SmartKraft_LebensSpur.ino  config_store.cpp  config_store.h  i18n_de.h  i18n_en.h  i18n_tr.h  mail_functions.cpp  mail_functions.h  network_manager.cpp  network_manager.h  ota_manager.cpp  ota_manager.h  scheduler.cpp  scheduler.h  test_functions.cpp  test_functions.h  web_handlers.cpp  web_handlers.h
(+78 files in other folders)
