idf_component_register(
    SRCS 
        "main.c"
        "device_id.c"
        "time_manager.c"
        "wifi_manager.c"
        "web_server.c"
        "ext_flash.c"
        "file_manager.c"
        "ota_manager.c"
        "log_manager.c"
        "web_assets.c"
        "config_manager.c"
        "session_auth.c"
        "timer_scheduler.c"
        "mail_sender.c"
        "relay_manager.c"
        "button_manager.c"
        "gui_downloader.c"
    INCLUDE_DIRS "."
    EMBED_TXTFILES "../setup.html"
)
